# SmoothSlideshow

./: .gitignore  CMakeLists.txt  README.md
src/: ConfigManager.cpp  ConfigManager.h  ImageCacheLoader.cpp  ImageCacheLoader.h  MainWindow.cpp  MainWindow.h  SlideshowWidget.cpp  SlideshowWidget.h  ThumbnailLoader.cpp  ThumbnailLoader.h  main.cpp
